Implement KML parsing via toGeoJSON

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,5 +15,6 @@
    <div id="map"></div>
 </body>
 
+<script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 <script src="{{ url_for('static', filename='app.js') }}"></script>
 </html>
