--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Test!</title>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-
+<script src="http://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"/>
 
 </head>
@@ -15,6 +15,6 @@
    <div id="map"></div>
 </body>
 
-<script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
+<script src="{{ url_for('static', filename='bower_components/togeojson/togeojson.js') }}"></script>
 <script src="{{ url_for('static', filename='app.js') }}"></script>
 </html>
