--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <title>Test!</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src="http://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
@@ -12,9 +11,12 @@
 </head>
 
 <body>
+  <div id="drop"></div>
    <div id="map"></div>
+   <!--<a href="https://maps.google.com/locationhistory/kml?startTime=0&endTime=9000000000000" target="_blank">Click Here</a>-->
 </body>
 
 <script src="{{ url_for('static', filename='bower_components/togeojson/togeojson.js') }}"></script>
 <script src="{{ url_for('static', filename='app.js') }}"></script>
+<script src="{{ url_for('static', filename='lib/dropzone.js') }}"></script>
 </html>
