--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,24 @@
-#map { 
-  height: 580px; 
+body {
+  margin: 0;
 }
-
+#map { 
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+#drop {
+  opacity:    0.6; 
+  background: gray; 
+  width:      100%;
+  height:     100%; 
+  z-index:    1;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
+}
+#infoBox {
+  z-index: 2; 
+}
