--- a/static/styles.css
+++ b/static/styles.css
@@ -59,3 +59,45 @@ body {
 #dragPromptTiny {
   font-size: 0.2em;
 }
+#loader {
+  z-index:3;
+  margin: 6em auto;
+  font-size: 10px;
+  top: 35%;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(255, 255, 255, 0);
+  border-right: 1.1em solid rgba(255, 255, 255, 0);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0);
+  border-left: 1.1em solid #A1FF9E;
+  opacity: 0.7;
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+  display: none;
+}
+#loader,
+#loader:after {
+  border-radius: 50%;
+  width: 5em;
+  height: 5em;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
