--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Test!</title>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src="http://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
+<title>Heatmap!</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+<script src="https://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"/>
 
 </head>
@@ -19,12 +19,14 @@
      NOW DRAG IT HERE
      <div id="dragPromptTiny">
        *your data will NOT be sent anywhere. this app will not make any
-       more server requests. closing this tab will destroy your browser's
+       more server requests, other than download map tiles. closing this tab will destroy your browser's
        copy of whatever you put in here. <br><br> if you were 'unable to
-       fetch' your history, your account has 'location history'
+       fetch' your history, your account has location history
        turned off. check your settings. <br>or leave them be. 
     </div>
    </div>
+     <div id="loader">Loading...</div>
+
 </div>
    <div id="map"></div>
 </body>
