(refactor) Move helper code to separate file, implmnt browserify

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,5 @@
 </body>
 
 <script src="{{ url_for('static', filename='bower_components/togeojson/togeojson.js') }}"></script>
-<script src="{{ url_for('static', filename='app.js') }}"></script>
-<script src="{{ url_for('static', filename='lib/dropzone.js') }}"></script>
+<script src="{{ url_for('static', filename='bundle.js') }}"></script>
 </html>
