--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 <script src="https://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
-<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"/>
 
 </head>
 
@@ -19,7 +19,7 @@
      NOW DRAG IT HERE
      <div id="dragPromptTiny">
        *your data will NOT be sent anywhere. this app will not make any
-       more server requests, other than download map tiles. closing this tab will destroy your browser's
+       more server requests, other than to download map tiles. closing this tab will destroy your browser's
        copy of whatever you put in here. <br><br> if you were 'unable to
        fetch' your history, your account has location history
        turned off. check your settings. <br>or leave them be. 
@@ -32,5 +32,5 @@
 </body>
 
 <script src="{{ url_for('static', filename='bower_components/togeojson/togeojson.js') }}"></script>
-<script src="{{ url_for('static', filename='bundle.js') }}"></script>
+<script src="{{ url_for('static', filename='dist/bundle.js') }}"></script>
 </html>
